docs: update project name to service-orders-nestjs-api
- Update package.json name and description
- Update README.md with new project name and features
- Add JWT authentication documentation
- Update project structure with auth and user modules
- Add authentication examples and endpoints
- Update project status and next steps

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "stock-nestjs",
+  "name": "service-orders-nestjs-api",
   "version": "0.0.1",
-  "description": "",
+  "description": "Service Orders Management API built with NestJS, MongoDB, and JWT Authentication",
   "author": "",
   "private": true,
   "license": "UNLICENSED",
