--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/mongoose": "^11.0.3",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/throttler": "^6.4.0",
     "bcrypt": "^6.0.0",
     "mongoose": "^8.18.1",
     "passport": "^0.7.0",
