security: Remove JWT secret from repository and add to gitignore
- Remove env.external-mongodb.example containing JWT secret
- Add env.external-mongodb.example to .gitignore
- Prevent accidental commit of sensitive configuration files
- Update docker-compose.yml formatting

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
       redis:
         condition: service_healthy
     extra_hosts:
-      - "host.docker.internal:host-gateway"
+      - 'host.docker.internal:host-gateway'
     networks:
       - service-orders-network
     healthcheck:
