--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,8 @@ lerna-debug.log*
 .env.test.local
 .env.production.local
 .env.local
+.env.external-mongodb.example
+env.external-mongodb.example
 
 # temp directory
 .temp
