--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     environment:
       - NODE_ENV=production
       - PORT=3000
-      - MONGODB_URI=${MONGODB_URI:-mongodb://192.168.31.75:27017/service-orders}
+      - MONGODB_URI=${MONGODB_URI:-mongodb://admin:password123@192.168.31.75:27017/service-orders?authSource=admin}
       - JWT_SECRET=${JWT_SECRET:-your-super-secret-jwt-key-change-in-production}
       - JWT_EXPIRES_IN=${JWT_EXPIRES_IN:-7d}
       - THROTTLE_TTL=${THROTTLE_TTL:-60}
