fix: Add explicit env_file configuration to docker-compose.yml
- Add env_file: .env.production to app and redis services
- Ensure Docker Compose finds and loads environment variables
- Remove all default values from environment variables
- Fix 'variable is not set' warnings

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,8 @@
 services:
   # NestJS Application
   app:
+    env_file:
+      - .env.production
     build:
       context: .
       dockerfile: Dockerfile
@@ -36,6 +38,8 @@ services:
 
   # Redis Cache (for rate limiting and caching)
   redis:
+    env_file:
+      - .env.production
     image: redis:7.2-alpine
     container_name: service-orders-redis
     restart: unless-stopped
