fix: update deployment script to use absolute path for service directory
- Change directory navigation in CI workflow from relative to absolute path for service-orders-nestjs-api
- This ensures consistent deployment behavior regardless of the working directory

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
 
       - name: Deploy to homelab
         run: |
-          cd service-orders-nestjs-api
+          cd ~/service-orders-nestjs-api
           git pull origin main
           docker-compose down
           docker-compose up -d
