fix: update CI workflow to use 'docker compose' command
- Change 'docker-compose' to 'docker compose' for consistency with Docker's new CLI syntax
- This update ensures compatibility with the latest Docker versions

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,8 +14,8 @@ jobs:
         run: |
           cd ~/service-orders-nestjs-api
           git pull origin main
-          docker-compose down
-          docker-compose up -d
+          docker compose down
+          docker compose up -d
 
       - name: Health check
         run: |
